--- a/index.html
+++ b/index.html
@@ -21,51 +21,84 @@
     }
     .wrapper{
       width:100%;
-      max-width:480px;
+      max-width:420px;
     }
+
     .logos{
       display:flex;
-      justify-content:space-between;
+      justify-content:center;
       align-items:center;
-      margin-bottom:14px;
-      gap:10px;
+      gap:14px;
+      margin-bottom:18px;
     }
     .logo-item{
-      flex:1;
-      text-align:center;
+      background:rgba(0,0,0,.4);
+      border-radius:999px;
+      padding:6px 14px;
+      border:1px solid rgba(255,255,255,.18);
+      display:flex;
+      align-items:center;
+      justify-content:center;
     }
     .logo-item img{
-      max-height:60px;
-      max-width:100%;
-      object-fit:contain;
+      height:30px;
+      width:auto;
+      display:block;
     }
 
     .card{
-      background:linear-gradient(180deg,#170420,#050109);
+      background:rgba(5,0,25,.92);
       border-radius:22px;
-      padding:22px 18px 18px;
-      box-shadow:0 8px 30px rgba(0,0,0,.7);
-      border:1px solid rgba(255,255,255,.08);
+      padding:18px 18px 20px;
+      box-shadow:0 18px 45px rgba(0,0,0,.8);
+      border:1px solid rgba(255,255,255,.13);
+      position:relative;
+      overflow:hidden;
     }
+    .card::before{
+      content:"";
+      position:absolute;
+      inset:-40%;
+      background:radial-gradient(circle at top,#b96bff26 0,transparent 55%);
+      opacity:.9;
+      pointer-events:none;
+    }
+    .card > *{
+      position:relative;
+      z-index:1;
+    }
+
     .pill{
-      display:inline-block;
-      padding:6px 18px;
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      font-size:11px;
+      font-weight:800;
+      letter-spacing:.13em;
+      text-transform:uppercase;
+      padding:6px 12px;
       border-radius:999px;
-      background:rgba(255,255,255,.06);
-      border:1px solid rgba(255,255,255,.18);
-      font-size:12px;
-      font-weight:700;
-      letter-spacing:.06em;
-      text-transform:uppercase;
-      margin-bottom:14px;
-    }
-    .title{
-      font-size:24px;
-      font-weight:900;
-      text-transform:uppercase;
-      line-height:1.2;
+      background:rgba(12,0,44,.9);
+      border:1px solid rgba(255,255,255,.3);
       margin-bottom:10px;
     }
+    .pill::before{
+      content:"●";
+      font-size:10px;
+      color:#52ff9b;
+    }
+
+    .title{
+      font-size:26px;
+      font-weight:900;
+      text-transform:uppercase;
+      line-height:1.1;
+      margin-bottom:6px;
+    }
+    .title span{
+      color:#ffe86a;
+    }
+
     .subtitle{
       font-size:14px;
       color:#e0d9ff;
@@ -116,44 +149,56 @@
       border:1px solid rgba(255,255,255,.11);
       display:flex;
       justify-content:space-between;
-      font-size:12px;
+      gap:8px;
+      flex-wrap:wrap;
     }
     .stat-item{
-      flex:1;
-      text-align:center;
+      flex:1 1 30%;
+      margin-bottom:6px;
     }
     .stat-label{
-      color:#cdbfff;
-      font-weight:600;
-      margin-bottom:4px;
-      font-size:11px;
+      font-size:10px;
+      text-transform:uppercase;
+      letter-spacing:.06em;
+      color:#c7bfff;
+      margin-bottom:3px;
     }
     .stat-value{
+      font-size:14px;
       font-weight:800;
       color:#fff;
     }
 
     .games-image{
       margin-top:16px;
-      width:100%;
-      border-radius:14px;
+      border-radius:16px;
       overflow:hidden;
+      border:1px solid rgba(255,255,255,0.15);
     }
     .games-image img{
-      width:100%;
       display:block;
-      border-radius:14px;
+      width:100%;
+      height:auto;
     }
 
     .footer{
-      margin-top:10px;
-      font-size:10px;
+      margin-top:12px;
+      font-size:11px;
+      color:#b5aee5;
       text-align:center;
-      color:#b39fdd;
+    }
+
+    @media (max-width:480px){
+      .card{
+        padding:16px 14px 18px;
+      }
+      .title{
+        font-size:22px;
+      }
     }
   </style>
 
-  <!-- META PIXEL -->
+  <!-- Meta Pixel Code -->
   <script>
     !function(f,b,e,v,n,t,s){
       if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -165,12 +210,12 @@
       s.parentNode.insertBefore(t,s)
     }(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
 
-    fbq('init', '711179821799803');   // Nuevo Pixel ID
+    fbq('init', '1303948534558420');   // Nuevo Pixel ID
     fbq('track', 'PageView');
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=711179821799803&ev=PageView&noscript=1"/>
+         src="https://www.facebook.com/tr?id=1303948534558420&ev=PageView&noscript=1"/>
   </noscript>
 </head>
 <body>
@@ -184,13 +229,15 @@
     <section class="card">
       <div class="pill">ACCESO VIP</div>
 
-      <h1 class="title">Súper bono de bienvenida</h1>
-      <p class="subtitle">Escribinos apretando el botón de abajo para activar tu bono.</p>
+      <h1 class="title">Súper bono <span>de bienvenida</span></h1>
+      <p class="subtitle">
+        Escribinos por WhatsApp y activá tu usuario con bono especial de bienvenida.
+      </p>
 
       <a
         id="btn-whatsapp"
         class="btn-whatsapp"
-        href="https://wa.me/541151137549?text=Hola%20quiero%20un%20usuario"
+        href="https://wa.me/5491162807152?text=Hola%20quiero%20un%20usuario"
         target="_blank"
         rel="noopener"
       >
@@ -204,6 +251,14 @@
         <div class="stat-item">
           <div class="stat-label">BONO</div>
           <div class="stat-value">Especial</div>
+        </div>
+        <div class="stat-item">
+          <div class="stat-label">Depósitos</div>
+          <div class="stat-value">Inmediatos</div>
+        </div>
+        <div class="stat-item">
+          <div class="stat-label">Retiros</div>
+          <div class="stat-value">Sin límites</div>
         </div>
         <div class="stat-item">
           <div class="stat-label">Mínimo de carga</div>
@@ -224,12 +279,45 @@
     </section>
   </div>
 
-  <!-- EVENTO CLICK WHATSAPP -->
+  <!-- EVENTO CLICK WHATSAPP + NÚMERO DINÁMICO DESDE GOOGLE SHEETS -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       var btn = document.getElementById('btn-whatsapp');
       if (!btn) return;
 
+      // URL del CSV público de Google Sheets (basado en tu link)
+      var SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/1i-wZwXCw31f8sAEjstUm0lHjUWz4RKDLKMF1mb4JHCU/edit?usp=sharing';
+
+      // Mensaje por defecto de WhatsApp
+      var DEFAULT_MESSAGE = 'Hola quiero un usuario';
+
+      function actualizarHref(numeroCrudo) {
+        // Deja solo dígitos: saca +, espacios, guiones, etc.
+        var limpio = (numeroCrudo || '').toString().trim().replace(/[^\d]/g, '');
+        if (!limpio) {
+          console.warn('No se encontró número válido en el Google Sheets');
+          return;
+        }
+
+        var encodedText = encodeURIComponent(DEFAULT_MESSAGE);
+        btn.href = 'https://wa.me/' + limpio + '?text=' + encodedText;
+      }
+
+      // Leer el CSV del Sheets
+      fetch(SHEET_CSV_URL)
+        .then(function (res) { return res.text(); })
+        .then(function (texto) {
+          // Tomamos la primera línea y primera columna (celda A1)
+          var primeraLinea = texto.split('\n')[0] || '';
+          var primeraCelda = primeraLinea.split(',')[0] || '';
+          actualizarHref(primeraCelda);
+        })
+        .catch(function (err) {
+          console.error('Error cargando número desde Google Sheets:', err);
+          // Si falla, se queda el href por defecto
+        });
+
+      // Evento de Meta Pixel para click en WhatsApp
       btn.addEventListener('click', function () {
         if (typeof fbq === 'function') {
           fbq('trackCustom', 'clickwhatsapp', {
