--- a/index.html
+++ b/index.html
@@ -8,197 +8,175 @@
   <meta name="theme-color" content="#6d16c9">
 
   <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{
-      min-height:100vh;
-      font-family:system-ui,-apple-system,"Segoe UI",Roboto,Ubuntu,sans-serif;
-      background:radial-gradient(circle at top,#8225ff 0,#2a004f 55%,#090015 100%);
-      color:#fff;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:18px;
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      min-height: 100vh;
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, sans-serif;
+      background: radial-gradient(circle at top, #8225ff 0, #2a004f 55%, #090015 100%);
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 18px;
     }
-    .wrapper{
-      width:100%;
-      max-width:420px;
+    .wrapper {
+      width: 100%;
+      max-width: 420px;
     }
-
-    .logos{
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      gap:14px;
-      margin-bottom:18px;
+    .logos {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 14px;
+      margin-bottom: 18px;
     }
-    .logo-item{
-      background:rgba(0,0,0,.4);
-      border-radius:999px;
-      padding:6px 14px;
-      border:1px solid rgba(255,255,255,.18);
-      display:flex;
-      align-items:center;
-      justify-content:center;
+    .logo-item {
+      background: rgba(0,0,0,.4);
+      border-radius: 999px;
+      padding: 6px 14px;
+      border: 1px solid rgba(255,255,255,.18);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    .logo-item img{
-      height:30px;
-      width:auto;
-      display:block;
+    .logo-item img {
+      height: 30px;
+      width: auto;
+      display: block;
     }
-
-    .card{
-      background:rgba(5,0,25,.92);
-      border-radius:22px;
-      padding:18px 18px 20px;
-      box-shadow:0 18px 45px rgba(0,0,0,.8);
-      border:1px solid rgba(255,255,255,.13);
-      position:relative;
-      overflow:hidden;
+    .card {
+      background: rgba(5,0,25,.92);
+      border-radius: 22px;
+      padding: 18px 18px 20px;
+      box-shadow: 0 18px 45px rgba(0,0,0,.8);
+      border: 1px solid rgba(255,255,255,.13);
+      position: relative;
+      overflow: hidden;
     }
-    .card::before{
-      content:"";
-      position:absolute;
-      inset:-40%;
-      background:radial-gradient(circle at top,#b96bff26 0,transparent 55%);
-      opacity:.9;
-      pointer-events:none;
+    .card::before {
+      content: "";
+      position: absolute;
+      inset: -40%;
+      background: radial-gradient(circle at top, #b96bff26 0, transparent 55%);
+      opacity: .9;
+      pointer-events: none;
     }
-    .card > *{
-      position:relative;
-      z-index:1;
+    .card > * {
+      position: relative;
+      z-index: 1;
     }
-
-    .pill{
-      display:inline-flex;
-      align-items:center;
-      gap:8px;
-      font-size:11px;
-      font-weight:800;
-      letter-spacing:.13em;
-      text-transform:uppercase;
-      padding:6px 12px;
-      border-radius:999px;
-      background:rgba(12,0,44,.9);
-      border:1px solid rgba(255,255,255,.3);
-      margin-bottom:10px;
+    .pill {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 11px;
+      font-weight: 800;
+      letter-spacing: .13em;
+      text-transform: uppercase;
+      padding: 6px 12px;
+      border-radius: 999px;
+      background: rgba(12,0,44,.9);
+      border: 1px solid rgba(255,255,255,.3);
+      margin-bottom: 10px;
     }
-    .pill::before{
-      content:"●";
-      font-size:10px;
-      color:#52ff9b;
+    .pill::before {
+      content: "●";
+      font-size: 10px;
+      color: #52ff9b;
     }
-
-    .title{
-      font-size:26px;
-      font-weight:900;
-      text-transform:uppercase;
-      line-height:1.1;
-      margin-bottom:6px;
+    .title {
+      font-size: 26px;
+      font-weight: 900;
+      text-transform: uppercase;
+      line-height: 1.1;
+      margin-bottom: 6px;
     }
-    .title span{
-      color:#ffe86a;
+    .title span {
+      color: #ffe86a;
     }
-
-    .subtitle{
-      font-size:14px;
-      color:#e0d9ff;
-      margin-bottom:18px;
+    .subtitle {
+      font-size: 14px;
+      color: #e0d9ff;
+      margin-bottom: 18px;
     }
-
-    .btn-whatsapp{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap:10px;
-      width:100%;
-      padding:15px 18px;
-      border-radius:999px;
-      border:none;
-      cursor:pointer;
-      font-size:16px;
-      font-weight:800;
-      text-transform:uppercase;
-      background:linear-gradient(180deg,#15d15b,#09a33f);
-      color:#fff;
-      box-shadow:0 10px 26px rgba(4,130,46,0.8);
-      text-decoration:none;
+    .btn-whatsapp {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      width: 100%;
+      padding: 15px 18px;
+      border-radius: 999px;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: 800;
+      text-transform: uppercase;
+      background: linear-gradient(180deg, #15d15b, #09a33f);
+      color: #fff;
+      box-shadow: 0 10px 26px rgba(4,130,46,0.8);
+      text-decoration: none;
     }
-    .btn-whatsapp img{
-      width:22px;
-      height:22px;
+    .btn-whatsapp img {
+      width: 22px;
+      height: 22px;
     }
-
-    .bar{
-      margin-top:14px;
-      padding:8px 10px;
-      border-radius:999px;
-      background:rgba(255,255,255,.05);
-      border:1px solid rgba(255,255,255,.14);
-      font-size:11px;
-      font-weight:700;
-      text-transform:uppercase;
-      color:#ffe86a;
-      text-align:center;
+    .bar {
+      margin-top: 14px;
+      padding: 8px 10px;
+      border-radius: 999px;
+      background: rgba(255,255,255,.05);
+      border: 1px solid rgba(255,255,255,.14);
+      font-size: 11px;
+      font-weight: 700;
+      text-transform: uppercase;
+      color: #ffe86a;
+      text-align: center;
     }
-
-    .stats{
-      margin-top:16px;
-      padding:10px 10px 6px;
-      border-radius:16px;
-      background:rgba(255,255,255,.02);
-      border:1px solid rgba(255,255,255,.11);
-      display:flex;
-      justify-content:space-between;
-      gap:8px;
-      flex-wrap:wrap;
+    .stats {
+      margin-top: 16px;
+      padding: 10px 10px 6px;
+      border-radius: 16px;
+      background: rgba(255,255,255,.02);
+      border: 1px solid rgba(255,255,255,.11);
+      display: flex;
+      justify-content: space-between;
+      gap: 8px;
+      flex-wrap: wrap;
     }
-    .stat-item{
-      flex:1 1 30%;
-      margin-bottom:6px;
+    .stat-item { flex: 1 1 30%; margin-bottom: 6px; }
+    .stat-label {
+      font-size: 10px;
+      text-transform: uppercase;
+      letter-spacing: .06em;
+      color: #c7bfff;
+      margin-bottom: 3px;
     }
-    .stat-label{
-      font-size:10px;
-      text-transform:uppercase;
-      letter-spacing:.06em;
-      color:#c7bfff;
-      margin-bottom:3px;
+    .stat-value {
+      font-size: 14px;
+      font-weight: 800;
+      color: #fff;
     }
-    .stat-value{
-      font-size:14px;
-      font-weight:800;
-      color:#fff;
+    .games-image {
+      margin-top: 16px;
+      border-radius: 16px;
+      overflow: hidden;
+      border: 1px solid rgba(255,255,255,0.15);
     }
-
-    .games-image{
-      margin-top:16px;
-      border-radius:16px;
-      overflow:hidden;
-      border:1px solid rgba(255,255,255,0.15);
+    .games-image img {
+      display: block;
+      width: 100%;
+      height: auto;
     }
-    .games-image img{
-      display:block;
-      width:100%;
-      height:auto;
-    }
-
-    .footer{
-      margin-top:12px;
-      font-size:11px;
-      color:#b5aee5;
-      text-align:center;
-    }
-
-    @media (max-width:480px){
-      .card{
-        padding:16px 14px 18px;
-      }
-      .title{
-        font-size:22px;
-      }
+    .footer {
+      margin-top: 12px;
+      font-size: 11px;
+      color: #b5aee5;
+      text-align: center;
     }
   </style>
 
-  <!-- Meta Pixel Code -->
+  <!-- Meta Pixel -->
   <script>
     !function(f,b,e,v,n,t,s){
       if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -210,118 +188,80 @@
       s.parentNode.insertBefore(t,s)
     }(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
 
-    fbq('init', '1303948534558420');   // Nuevo Pixel ID
+    fbq('init', '1303948534558420');
     fbq('track', 'PageView');
   </script>
-  <noscript>
-    <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=1303948534558420&ev=PageView&noscript=1"/>
-  </noscript>
 </head>
+
 <body>
 
   <div class="wrapper">
     <div class="logos">
-      <div class="logo-item"><img src="logo bet22.webp" alt="22Bet"></div>
-      <div class="logo-item"><img src="ganamos logo.webp" alt="Ganamos"></div>
+      <div class="logo-item"><img src="logo bet22.webp" alt=""></div>
+      <div class="logo-item"><img src="ganamos logo.webp" alt=""></div>
     </div>
 
     <section class="card">
       <div class="pill">ACCESO VIP</div>
 
       <h1 class="title">Súper bono <span>de bienvenida</span></h1>
-      <p class="subtitle">
-        Escribinos por WhatsApp y activá tu usuario con bono especial de bienvenida.
-      </p>
+      <p class="subtitle">Escribinos por WhatsApp y activá tu usuario con bono especial.</p>
 
-      <a
-        id="btn-whatsapp"
-        class="btn-whatsapp"
-        href="https://wa.me/5491151137549?text=Hola%20quiero%20un%20usuario"
-        target="_blank"
-        rel="noopener"
-      >
+      <a id="btn-whatsapp" class="btn-whatsapp" href="#" target="_blank" rel="noopener">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="">
         WHATSAPP OFFICIAL
       </a>
 
-      <div class="bar">Atención y retiros sin límites las 24 hs</div>
+      <div class="bar">Atención y retiros 24 hs</div>
 
       <div class="stats">
-        <div class="stat-item">
-          <div class="stat-label">BONO</div>
-          <div class="stat-value">Especial</div>
-        </div>
-        <div class="stat-item">
-          <div class="stat-label">Depósitos</div>
-          <div class="stat-value">Inmediatos</div>
-        </div>
-        <div class="stat-item">
-          <div class="stat-label">Retiros</div>
-          <div class="stat-value">Sin límites</div>
-        </div>
-        <div class="stat-item">
-          <div class="stat-label">Mínimo de carga</div>
-          <div class="stat-value">$1.000</div>
-        </div>
-        <div class="stat-item">
-          <div class="stat-label">Mínimo de retiro</div>
-          <div class="stat-value">$2.000</div>
-        </div>
+        <div class="stat-item"><div class="stat-label">BONO</div><div class="stat-value">Especial</div></div>
+        <div class="stat-item"><div class="stat-label">Depósitos</div><div class="stat-value">Inmediatos</div></div>
+        <div class="stat-item"><div class="stat-label">Retiros</div><div class="stat-value">Sin límites</div></div>
+        <div class="stat-item"><div class="stat-label">Carga mín.</div><div class="stat-value">$1.000</div></div>
+        <div class="stat-item"><div class="stat-label">Retiro mín.</div><div class="stat-value">$2.000</div></div>
       </div>
 
       <div class="games-image">
-        <!-- Asegurate de que este archivo exista en tu host -->
-        <img src="juegos.jpeg" alt="Juegos">
+        <img src="juegos.jpeg" alt="">
       </div>
 
-      <p class="footer">© 2025 • Juego solo +18. Operá con responsabilidad.</p>
+      <p class="footer">© 2025 • Juego +18</p>
     </section>
   </div>
 
-  <!-- EVENTO CLICK WHATSAPP + NÚMERO DINÁMICO DESDE GOOGLE SHEETS -->
+  <!-- NÚMERO DINÁMICO DESDE GOOGLE SHEETS -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       var btn = document.getElementById('btn-whatsapp');
-      if (!btn) return;
 
-      // URL del CSV público de Google Sheets (basado en tu link)
-      var SHEET_CSV_URL = 'https://docs.google.com/spreadsheets/d/1i-wZwXCw31f8sAEjstUm0lHjUWz4RKDLKMF1mb4JHCU/edit?usp=sharing';
+      var SHEET_CSV_URL =
+        "https://docs.google.com/spreadsheets/d/e/2PACX-1vSQ2hUIneRrO-OFihhGhbSSALOtpgG4Dhrbjd1CBt1-ICNZSbKHmIYQiMYzQNa0-y-cUuyy61FMYdAT/pubhtml?gid=0&single=csv";
 
-      // Mensaje por defecto de WhatsApp
-      var DEFAULT_MESSAGE = 'Hola quiero un usuario';
+      var DEFAULT_MESSAGE = "Hola quiero un usuario";
 
       function actualizarHref(numeroCrudo) {
-        // Deja solo dígitos: saca +, espacios, guiones, etc.
-        var limpio = (numeroCrudo || '').toString().trim().replace(/[^\d]/g, '');
-        if (!limpio) {
-          console.warn('No se encontró número válido en el Google Sheets');
-          return;
-        }
+        var limpio = (numeroCrudo || "")
+          .toString()
+          .trim()
+          .replace(/[^\d]/g, "");
+        if (!limpio) return;
 
-        var encodedText = encodeURIComponent(DEFAULT_MESSAGE);
-        btn.href = 'https://wa.me/' + limpio + '?text=' + encodedText;
+        btn.href = "https://wa.me/" + limpio + "?text=" + encodeURIComponent(DEFAULT_MESSAGE);
       }
 
-      // Leer el CSV del Sheets
       fetch(SHEET_CSV_URL)
-        .then(function (res) { return res.text(); })
-        .then(function (texto) {
-          // Tomamos la primera línea y primera columna (celda A1)
-          var primeraLinea = texto.split('\n')[0] || '';
-          var primeraCelda = primeraLinea.split(',')[0] || '';
+        .then((res) => res.text())
+        .then((texto) => {
+          var primeraLinea = texto.split("\n")[0] || "";
+          var primeraCelda = primeraLinea.split(",")[0] || "";
           actualizarHref(primeraCelda);
-        })
-        .catch(function (err) {
-          console.error('Error cargando número desde Google Sheets:', err);
-          // Si falla, se queda el href por defecto
         });
 
-      // Evento de Meta Pixel para click en WhatsApp
-      btn.addEventListener('click', function () {
-        if (typeof fbq === 'function') {
-          fbq('trackCustom', 'clickwhatsapp', {
-            page: window.location.href
+      btn.addEventListener("click", function () {
+        if (typeof fbq === "function") {
+          fbq("trackCustom", "clickwhatsapp", {
+            page: window.location.href,
           });
         }
       });
