--- a/index.html
+++ b/index.html
@@ -8,211 +8,155 @@
   <meta name="theme-color" content="#6d16c9">
 
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      min-height: 100vh;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, sans-serif;
-      background: radial-gradient(circle at top, #8225ff 0, #2a004f 55%, #090015 100%);
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 18px;
+    *{margin:0;padding:0;box-sizing:border-box}
+    body{
+      min-height:100vh;
+      font-family:system-ui,-apple-system,"Segoe UI",Roboto,Ubuntu,sans-serif;
+      background:radial-gradient(circle at top,#8225ff 0,#2a004f 55%,#090015 100%);
+      color:#fff;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:18px;
     }
-    .wrapper {
-      width: 100%;
-      max-width: 420px;
+    .wrapper{width:100%;max-width:420px}
+    .logos{display:flex;justify-content:center;gap:14px;margin-bottom:18px}
+    .logo-item{
+      background:rgba(0,0,0,.4);
+      border-radius:999px;
+      padding:6px 14px;
+      border:1px solid rgba(255,255,255,.18)
     }
-    .logos {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 14px;
-      margin-bottom: 18px;
+    .logo-item img{height:30px}
+    .card{
+      background:rgba(5,0,25,.92);
+      border-radius:22px;
+      padding:18px;
+      box-shadow:0 18px 45px rgba(0,0,0,.8);
+      border:1px solid rgba(255,255,255,.13);
+      position:relative;
+      overflow:hidden
     }
-    .logo-item {
-      background: rgba(0,0,0,.4);
-      border-radius: 999px;
-      padding: 6px 14px;
-      border: 1px solid rgba(255,255,255,.18);
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    .card::before{
+      content:"";
+      position:absolute;
+      inset:-40%;
+      background:radial-gradient(circle at top,#b96bff26 0,transparent 55%);
+      opacity:.9
     }
-    .logo-item img {
-      height: 30px;
-      width: auto;
-      display: block;
+    .card > *{position:relative;z-index:1}
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      font-size:11px;
+      font-weight:800;
+      text-transform:uppercase;
+      padding:6px 12px;
+      border-radius:999px;
+      background:rgba(12,0,44,.9);
+      border:1px solid rgba(255,255,255,.3);
+      margin-bottom:10px
     }
-    .card {
-      background: rgba(5,0,25,.92);
-      border-radius: 22px;
-      padding: 18px 18px 20px;
-      box-shadow: 0 18px 45px rgba(0,0,0,.8);
-      border: 1px solid rgba(255,255,255,.13);
-      position: relative;
-      overflow: hidden;
+    .pill::before{content:"●";font-size:10px;color:#52ff9b}
+    .title{font-size:26px;font-weight:900;text-transform:uppercase;margin-bottom:6px}
+    .title span{color:#ffe86a}
+    .subtitle{font-size:14px;color:#e0d9ff;margin-bottom:18px}
+    .btn-whatsapp{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      gap:10px;
+      width:100%;
+      padding:15px 18px;
+      border-radius:999px;
+      margin-top:12px;
+      background:linear-gradient(180deg,#15d15b,#09a33f);
+      color:#fff;
+      font-size:16px;
+      font-weight:800;
+      text-decoration:none;
+      box-shadow:0 10px 26px rgba(4,130,46,0.8)
     }
-    .card::before {
-      content: "";
-      position: absolute;
-      inset: -40%;
-      background: radial-gradient(circle at top, #b96bff26 0, transparent 55%);
-      opacity: .9;
-      pointer-events: none;
+    .btn-whatsapp img{width:22px}
+    .bar{
+      margin-top:14px;
+      padding:8px 10px;
+      border-radius:999px;
+      background:rgba(255,255,255,.05);
+      border:1px solid rgba(255,255,255,.14);
+      text-align:center;
+      font-size:11px;
+      color:#ffe86a
     }
-    .card > * {
-      position: relative;
-      z-index: 1;
+    .stats{
+      margin-top:16px;
+      padding:10px;
+      border-radius:16px;
+      background:rgba(255,255,255,.02);
+      border:1px solid rgba(255,255,255,.11);
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px
     }
-    .pill {
-      display: inline-flex;
-      align-items: center;
-      gap: 8px;
-      font-size: 11px;
-      font-weight: 800;
-      letter-spacing: .13em;
-      text-transform: uppercase;
-      padding: 6px 12px;
-      border-radius: 999px;
-      background: rgba(12,0,44,.9);
-      border: 1px solid rgba(255,255,255,.3);
-      margin-bottom: 10px;
+    .stat-item{flex:1 1 30%}
+    .stat-label{font-size:10px;color:#c7bfff;text-transform:uppercase}
+    .stat-value{font-size:14px;font-weight:800}
+    .games-image{
+      margin-top:16px;
+      border-radius:16px;
+      overflow:hidden;
+      border:1px solid rgba(255,255,255,.15)
     }
-    .pill::before {
-      content: "●";
-      font-size: 10px;
-      color: #52ff9b;
-    }
-    .title {
-      font-size: 26px;
-      font-weight: 900;
-      text-transform: uppercase;
-      line-height: 1.1;
-      margin-bottom: 6px;
-    }
-    .title span {
-      color: #ffe86a;
-    }
-    .subtitle {
-      font-size: 14px;
-      color: #e0d9ff;
-      margin-bottom: 18px;
-    }
-    .btn-whatsapp {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 10px;
-      width: 100%;
-      padding: 15px 18px;
-      border-radius: 999px;
-      border: none;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: 800;
-      text-transform: uppercase;
-      background: linear-gradient(180deg, #15d15b, #09a33f);
-      color: #fff;
-      box-shadow: 0 10px 26px rgba(4,130,46,0.8);
-      text-decoration: none;
-    }
-    .btn-whatsapp img {
-      width: 22px;
-      height: 22px;
-    }
-    .bar {
-      margin-top: 14px;
-      padding: 8px 10px;
-      border-radius: 999px;
-      background: rgba(255,255,255,.05);
-      border: 1px solid rgba(255,255,255,.14);
-      font-size: 11px;
-      font-weight: 700;
-      text-transform: uppercase;
-      color: #ffe86a;
-      text-align: center;
-    }
-    .stats {
-      margin-top: 16px;
-      padding: 10px 10px 6px;
-      border-radius: 16px;
-      background: rgba(255,255,255,.02);
-      border: 1px solid rgba(255,255,255,.11);
-      display: flex;
-      justify-content: space-between;
-      gap: 8px;
-      flex-wrap: wrap;
-    }
-    .stat-item { flex: 1 1 30%; margin-bottom: 6px; }
-    .stat-label {
-      font-size: 10px;
-      text-transform: uppercase;
-      letter-spacing: .06em;
-      color: #c7bfff;
-      margin-bottom: 3px;
-    }
-    .stat-value {
-      font-size: 14px;
-      font-weight: 800;
-      color: #fff;
-    }
-    .games-image {
-      margin-top: 16px;
-      border-radius: 16px;
-      overflow: hidden;
-      border: 1px solid rgba(255,255,255,0.15);
-    }
-    .games-image img {
-      display: block;
-      width: 100%;
-      height: auto;
-    }
-    .footer {
-      margin-top: 12px;
-      font-size: 11px;
-      color: #b5aee5;
-      text-align: center;
-    }
+    .games-image img{width:100%}
+    .footer{margin-top:12px;font-size:11px;color:#b5aee5;text-align:center}
   </style>
 
-  <!-- Meta Pixel -->
+  <!-- PIXEL -->
   <script>
     !function(f,b,e,v,n,t,s){
-      if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      if(f.fbq)return;n=f.fbq=function(){ n.callMethod ?
       n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;
-      n.push=n;n.loaded=!0;n.version='2.0';
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
       n.queue=[];t=b.createElement(e);t.async=!0;
       t.src=v;s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)
-    }(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
+    }(window,document,'script','https://connect.facebook.net/en_US/fbevents.js');
 
-    fbq('init', '1303948534558420');
-    fbq('track', 'PageView');
+    fbq('init','1303948534558420');
+    fbq('track','PageView');
   </script>
 </head>
 
 <body>
 
   <div class="wrapper">
+
     <div class="logos">
       <div class="logo-item"><img src="logo bet22.webp" alt=""></div>
       <div class="logo-item"><img src="ganamos logo.webp" alt=""></div>
     </div>
 
     <section class="card">
+
       <div class="pill">ACCESO VIP</div>
 
       <h1 class="title">Súper bono <span>de bienvenida</span></h1>
       <p class="subtitle">Escribinos por WhatsApp y activá tu usuario con bono especial.</p>
 
-      <a id="btn-whatsapp" class="btn-whatsapp" href="#" target="_blank" rel="noopener">
+      <!-- HREF DE RESPALDO: SI FALLA SHEETS, IGUAL ABRE -->
+      <a
+        id="btn-whatsapp"
+        class="btn-whatsapp"
+        href="https://api.whatsapp.com/send?phone=5491162724592&text=Hola%20quiero%20un%20usuario&type=phone_number&app_absent=0"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="">
         WHATSAPP OFFICIAL
       </a>
 
-      <div class="bar">Atención y retiros 24 hs</div>
+      <div class="bar">Atención y retiros 24 HS</div>
 
       <div class="stats">
         <div class="stat-item"><div class="stat-label">BONO</div><div class="stat-value">Especial</div></div>
@@ -227,14 +171,18 @@
       </div>
 
       <p class="footer">© 2025 • Juego +18</p>
+
     </section>
   </div>
 
-  <!-- NÚMERO DINÁMICO DESDE GOOGLE SHEETS -->
+  <!-- SCRIPT DE WHATSAPP DINÁMICO -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      var btn = document.getElementById('btn-whatsapp');
 
+      var btn = document.getElementById('btn-whatsapp');
+      if (!btn) return;
+
+      // CSV publicado de tu Google Sheets
       var SHEET_CSV_URL =
         "https://docs.google.com/spreadsheets/d/e/2PACX-1vSQ2hUIneRrO-OFihhGhbSSALOtpgG4Dhrbjd1CBt1-ICNZSbKHmIYQiMYzQNa0-y-cUuyy61FMYdAT/pubhtml?gid=0&single=csv";
 
@@ -245,26 +193,40 @@
           .toString()
           .trim()
           .replace(/[^\d]/g, "");
-        if (!limpio) return;
 
-        btn.href = "https://wa.me/" + limpio + "?text=" + encodeURIComponent(DEFAULT_MESSAGE);
+        if (!limpio) {
+          console.warn("Número inválido, uso el respaldo.");
+          return;
+        }
+
+        var url =
+          "https://api.whatsapp.com/send?phone=" +
+          limpio +
+          "&text=" +
+          encodeURIComponent(DEFAULT_MESSAGE) +
+          "&type=phone_number&app_absent=0";
+
+        btn.href = url;
+        console.log("Número actualizado a:", url);
       }
 
       fetch(SHEET_CSV_URL)
-        .then((res) => res.text())
-        .then((texto) => {
+        .then(function (res) { return res.text(); })
+        .then(function (texto) {
           var primeraLinea = texto.split("\n")[0] || "";
           var primeraCelda = primeraLinea.split(",")[0] || "";
           actualizarHref(primeraCelda);
+        })
+        .catch(function (err) {
+          console.error("Error cargando número:", err);
         });
 
       btn.addEventListener("click", function () {
         if (typeof fbq === "function") {
-          fbq("trackCustom", "clickwhatsapp", {
-            page: window.location.href,
-          });
+          fbq("trackCustom","clickwhatsapp",{page:window.location.href});
         }
       });
+
     });
   </script>
 
